098_bst_map/grade.txt
Grading at 11/08/2021:00:50:34.435113
For commit ID c0bd23ffb725f791a34b62771916234b4ffa378c
Grading at Sun Nov  7 19:50:33 EST 2021
-----------------------------------------------
testcase 1 : Testing with BstMap<int,int>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In member function ‘virtual void BstMap<K, V>::remove(const K&)’:
bstmap.h:179:35: error: ‘value’ was not declared in this scope
           add ((*toReplace)->key, value);
                                   ^~~~~
bstmap.h:179:35: note: suggested alternative: ‘valloc’
           add ((*toReplace)->key, value);
                                   ^~~~~
                                   valloc
The code did not compile.  This test failed.
-----------------------------------------------
testcase 2 : Testing with BstMap<int,std::string>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In member function ‘virtual void BstMap<K, V>::remove(const K&)’:
bstmap.h:179:35: error: ‘value’ was not declared in this scope
           add ((*toReplace)->key, value);
                                   ^~~~~
bstmap.h:179:35: note: suggested alternative: ‘valloc’
           add ((*toReplace)->key, value);
                                   ^~~~~
                                   valloc
The code did not compile.  This test failed.
-----------------------------------------------
testcase 3 : Testing with BstMap<int,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In member function ‘virtual void BstMap<K, V>::remove(const K&)’:
bstmap.h:179:35: error: ‘value’ was not declared in this scope
           add ((*toReplace)->key, value);
                                   ^~~~~
bstmap.h:179:35: note: suggested alternative: ‘valloc’
           add ((*toReplace)->key, value);
                                   ^~~~~
                                   valloc
The code did not compile.  This test failed.
-----------------------------------------------
testcase 4 : Testing with BstMap<std::string,int>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In member function ‘virtual void BstMap<K, V>::remove(const K&)’:
bstmap.h:179:35: error: ‘value’ was not declared in this scope
           add ((*toReplace)->key, value);
                                   ^~~~~
bstmap.h:179:35: note: suggested alternative: ‘valloc’
           add ((*toReplace)->key, value);
                                   ^~~~~
                                   valloc
The code did not compile.  This test failed.
-----------------------------------------------
testcase 5 : Testing with BstMap<std::string,std::string>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In member function ‘virtual void BstMap<K, V>::remove(const K&)’:
bstmap.h:179:35: error: ‘value’ was not declared in this scope
           add ((*toReplace)->key, value);
                                   ^~~~~
bstmap.h:179:35: note: suggested alternative: ‘valloc’
           add ((*toReplace)->key, value);
                                   ^~~~~
                                   valloc
The code did not compile.  This test failed.
-----------------------------------------------
testcase 6 : Testing with BstMap<std::string,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In member function ‘virtual void BstMap<K, V>::remove(const K&)’:
bstmap.h:179:35: error: ‘value’ was not declared in this scope
           add ((*toReplace)->key, value);
                                   ^~~~~
bstmap.h:179:35: note: suggested alternative: ‘valloc’
           add ((*toReplace)->key, value);
                                   ^~~~~
                                   valloc
The code did not compile.  This test failed.
-----------------------------------------------
testcase 7 : Testing with BstMap<(a custom class we wrote),int>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In member function ‘virtual void BstMap<K, V>::remove(const K&)’:
bstmap.h:179:35: error: ‘value’ was not declared in this scope
           add ((*toReplace)->key, value);
                                   ^~~~~
bstmap.h:179:35: note: suggested alternative: ‘valloc’
           add ((*toReplace)->key, value);
                                   ^~~~~
                                   valloc
The code did not compile.  This test failed.
-----------------------------------------------
testcase 8 : Testing with BstMap<(a custom class we wrote),std::string>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In member function ‘virtual void BstMap<K, V>::remove(const K&)’:
bstmap.h:179:35: error: ‘value’ was not declared in this scope
           add ((*toReplace)->key, value);
                                   ^~~~~
bstmap.h:179:35: note: suggested alternative: ‘valloc’
           add ((*toReplace)->key, value);
                                   ^~~~~
                                   valloc
The code did not compile.  This test failed.
-----------------------------------------------
testcase 9 : Testing with BstMap<(a custom class we wrote),(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In member function ‘virtual void BstMap<K, V>::remove(const K&)’:
bstmap.h:179:35: error: ‘value’ was not declared in this scope
           add ((*toReplace)->key, value);
                                   ^~~~~
bstmap.h:179:35: note: suggested alternative: ‘valloc’
           add ((*toReplace)->key, value);
                                   ^~~~~
                                   valloc
The code did not compile.  This test failed.

Overall Grade: F
